--- a/bin/conda/libtoolchain/meta.yaml
+++ b/bin/conda/libtoolchain/meta.yaml
@@ -30,6 +30,9 @@ build:
   track_features:
     - vc12                 [win]
     # - vc14                 [win]
+  run_exports:
+    # - vs2015_runtime      [win]
+    - vs2013_runtime      [win]
 
 about:
   home: http://statiskit.rtfd.io/
@@ -50,10 +53,6 @@ requirements:
     - clang_osx-64        [osx]
     - clangxx_osx-64      [osx]
     - gfortran_osx-64     [osx]
-    - pywin32             [win]
-    # - vs2015_runtime      [win]
-    # - vs2013_runtime      [win]
-  run_exports:
     - pywin32             [win]
     # - vs2015_runtime      [win]
     - vs2013_runtime      [win]
