--- a/bin/docker/ubuntu-32/Dockerfile
+++ b/bin/docker/ubuntu-32/Dockerfile
@@ -6,7 +6,7 @@ ARG CONDA_VERSION
 
 RUN apt-get update
 RUN apt-get -y upgrade
-RUN apt-get install curl bzip2 -y
+RUN apt-get install curl bzip2 build-essential -y
 
 RUN useradd -m main --shell /bin/bash && echo "main:main" | chpasswd && adduser main sudo
 USER main
@@ -21,10 +21,9 @@ RUN chmod -R a+rwx /home/main/miniconda
 RUN conda config --set always_yes yes
 RUN conda install git conda-build anaconda-client
 # RUN conda install vcs ipython jupyter conda-build anaconda-client -c statiskit -c conda-forge
-RUN git clone http://github.com/StatisKit/conda-tools
-RUN git clone http://github.com/StatisKit/StatisKit
+RUN git clone --recursive http://github.com/StatisKit/StatisKit
 RUN cd StatisKit/bin/conda && conda build python-scons scons-tools libtoolchain python-toolchain --old-build-string
-RUN cd conda-tools/bin/conda && conda build conda-tools --old-build-string
-RUN conda install conda_tools --use-local
-RUN git clone http://github.com/StatisKit/StatisKit
-RUN conda release StatisKit
+RUN cd StatisKit/share/git/ClangLite/bin/conda && git pull origin master
+RUN cd StatisKit/share/git/ClangLite/bin/conda && conda build llvm clang libclanglite python-clanglite --old-build-string
+RUN cd StatisKit/share/git/AutoWIG/bin/conda && conda build python-autowig --old-build-string
+RUN for filename in $CONDA_PREFIX/conda-bld/linux-32/*; do anaconda upload $filename -u statiskit --label docker_release; done
