--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,62 +30,58 @@ branches:
 image: Visual Studio 2013
 
 platform:
-  # - x86
+  - x86
   - x64
 
 environment:
   matrix:
-    # - CONDA_RECIPE: bin\conda\vcs
-    # - CONDA_RECIPE: bin\conda\python-scons
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\python-scons
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\scons-tools
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\scons-tools
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\python-parse
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\python-parse
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\libtoolchain
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\libtoolchain
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\python-toolchain
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\python-toolchain
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\boost-suite
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\boost-suite
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: bin\conda\boost-meta
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: bin\conda\boost-meta
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
-    #   CONDA_VERSION: 3
-    # # - CONDA_RECIPE: share\git\SoftMaint\bin\conda\python-softmaint
-    # #   CONDA_VERSION: 2
-    # # - CONDA_RECIPE: share\git\SoftMaint\bin\conda\python-softmaint
-    # #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
-    #   CONDA_VERSION: 3
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-    #   CONDA_VERSION: 2
-    # - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
-    #   CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\vcs
+    - CONDA_RECIPE: bin\conda\python-scons
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\python-scons
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\scons-tools
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\python-parse
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\python-parse
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\libtoolchain
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\libtoolchain
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\python-toolchain
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\boost-suite
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: bin\conda\boost-meta
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: bin\conda\boost-meta
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: share\git\conda-tools\bin\conda\conda-tools
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\llvm
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\clang
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clang
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\libclanglite
+      CONDA_VERSION: 3
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+      CONDA_VERSION: 2
+    - CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
+      CONDA_VERSION: 3
     - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
       CONDA_VERSION: 2
     - CONDA_RECIPE: share\git\AutoWIG\bin\conda\python-autowig
@@ -93,7 +89,6 @@ environment:
     - ANACONDA_RELABEL: main
 
 matrix:
-  fast_finish: true
   allow_failures:
     - platform: x86
       CONDA_RECIPE: share\git\ClangLite\bin\conda\python-clanglite
