--- a/bin/docker/linux-32/Dockerfile
+++ b/bin/docker/linux-32/Dockerfile
@@ -22,6 +22,7 @@ env PATH /home/main/miniconda:/home/main/miniconda/bin:$PATH
 RUN chmod -R a+rwx /home/main/miniconda
 RUN conda config --set always_yes yes
 RUN conda install git conda-build anaconda-client
+RUN echo "source activate root" >> .bashrc
 
 RUN echo "set -ve" > build.sh
 RUN echo "git clone --recursive http://github.com/StatisKit/StatisKit" >> build.sh
@@ -30,10 +31,13 @@ RUN echo "conda build python-scons scons-tools libtoolchain python-toolchain boo
 RUN echo "cd ../../share/git/ClangLite/bin/conda" >> build.sh
 RUN echo "conda build llvm clang libclanglite python-clanglite --old-build-string" >> build.sh
 RUN echo "cd ../../../AutoWIG/bin/conda" >> build.sh
-RUN echo "cd StatisKit/share/git/AutoWIG/bin/conda && conda build python-autowig --old-build-string" >> build.sh
+RUN echo "conda build python-autowig --old-build-string" >> build.sh
 RUN echo "set +ve" >> build.sh
 
-RUN echo "RUN for filename in $CONDA_PREFIX/conda-bld/linux-32/*; do anaconda upload $filename -u statiskit --label linux-64_release; done" > upload.sh
+RUN echo "set -ve" > upload.sh
+
+RUN echo "for filename in \$CONDA_PREFIX/conda-bld/linux-32/*.tar.bz2; do anaconda upload \$filename -u statiskit --label linux-32_release; done" > upload.sh
+RUN echo "set +ve" >> upload.sh
 
 RUN echo "set -ve" > install.sh
 RUN echo "conda install vcs ipython jupyter conda-build anaconda-client conda-tools python-softmaint python-autowig python-clanglite -c statiskit -c conda-forge" > install.sh
